tests/sources/invalid/generics/generic_class_nested_type_arg_errors.fire
// Malformed nested type-argument lists and missing closing '>' in generic
// class instantiations.
class Pair<T, U> {
    a: T;
    b: U;

    fn Pair(a: T, b: U) {
        this.a = a;
        this.b = b;
    }
}

// Missing type argument inside a nested generic type argument.
fn main() -> int32 {
    p: Pair<Pair<,int32>, int32> = Pair(Pair(1, 2), 3);  //~ ERROR FS-PARSE-0010 @18
//~^ ERROR FS-PARSE-0012 @36
    return 0;
}
